--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+
 {% block content %}
 <h2 class="mt-3">Admin Dashboard</h2>
 
@@ -30,7 +31,7 @@
     <input type="file" name="image" class="form-control">
   </div>
   <div class="mb-2">
-    <textarea name="adsense_code" placeholder="Paste Google AdSense code here (optional)" class="form-control"></textarea>
+    <textarea name="adsense_code" placeholder="Optional Google AdSense code" class="form-control"></textarea>
   </div>
   <button class="btn btn-primary">Add Post</button>
 </form>
@@ -52,14 +53,12 @@
       <td>{{ post.title }}</td>
       <td>{{ post.category }}</td>
       <td>
-        <a href="/post/{{ post.id }}" class="btn btn-info btn-sm">View</a>
+        <a href="{{ url_for('view_post', post_id=post.id) }}" class="btn btn-info btn-sm">View</a>
       </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
-
-<a href="{{ url_for('admin_logout') }}" class="btn btn-secondary mt-3">Logout</a>
 {% endblock %}
 
 
