--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,21 @@
 {% extends 'base.html' %}
+
 {% block content %}
-
-<h2 class="mt-3">Admin Login</h2>
-<form method="POST" class="mt-3">
-  {% if error %}
-  <div class="alert alert-danger">{{ error }}</div>
-  {% endif %}
-  <div class="mb-2">
-    <input type="text" name="username" placeholder="Username" class="form-control" required>
+<div class="row justify-content-center">
+  <div class="col-md-4">
+    <h3 class="mt-3">Admin Login</h3>
+    {% if error %}
+    <div class="alert alert-danger">{{ error }}</div>
+    {% endif %}
+    <form method="POST">
+      <div class="mb-2">
+        <input type="text" name="username" placeholder="Username" class="form-control" required>
+      </div>
+      <div class="mb-2">
+        <input type="password" name="password" placeholder="Password" class="form-control" required>
+      </div>
+      <button class="btn btn-primary w-100">Login</button>
+    </form>
   </div>
-  <div class="mb-2">
-    <input type="password" name="password" placeholder="Password" class="form-control" required>
-  </div>
-  <button class="btn btn-primary">Login</button>
-</form>
-
+</div>
 {% endblock %}
