--- a/templates/post.html
+++ b/templates/post.html
@@ -1,15 +1,19 @@
-{% extends "base.html" %}
-{% block content %}
-<h2>{{ post.title }}</h2>
-<p><strong>Category:</strong> {{ post.category }}</p>
-{% if post.image %}
-<img src="{{ url_for('uploaded_file', filename=post.image) }}" class="img-fluid my-3">
-{% endif %}
-<p>{{ post.content }}</p>
+{% extends 'base.html' %}
 
-{% if post.adsense %}
-<div class="my-3">
-  {{ post.adsense | safe }}
+{% block content %}
+<div class="card mb-3">
+  {% if post.image %}
+  <img src="{{ url_for('uploaded_file', filename=post.image) }}" class="card-img-top" alt="Post Image">
+  {% endif %}
+  <div class="card-body">
+    <h3>{{ post.title }}</h3>
+    <p class="text-muted">Category: {{ post.category }}</p>
+    <p>{{ post.content }}</p>
+  </div>
+  {% if post.adsense_code %}
+  <div class="p-2 text-center">
+    {{ post.adsense_code|safe }}
+  </div>
+  {% endif %}
 </div>
-{% endif %}
 {% endblock %}
