--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,5 +1,3 @@
-{% extends 'base.html' %}
-
 {% block content %}
 <h2 class="mt-3">Admin Dashboard</h2>
 
@@ -54,13 +52,13 @@
       <td>{{ post.category }}</td>
       <td>
         <a href="{{ url_for('view_post', post_id=post.id) }}" class="btn btn-info btn-sm">View</a>
+        <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btn btn-warning btn-sm">Edit</a>
+        <a href="{{ url_for('delete_post', post_id=post.id) }}" class="btn btn-danger btn-sm" 
+           onclick="return confirm('Are you sure you want to delete this post?');">Delete</a>
       </td>
     </tr>
     {% endfor %}
   </tbody>
 </table>
 {% endblock %}
-
-
-
 
